--- a/Blockchain/pom.xml
+++ b/Blockchain/pom.xml
@@ -2,11 +2,15 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <parent>
+        <artifactId>HDSLedger</artifactId>
+        <groupId>group13</groupId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
+
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>group13</groupId>
-    <artifactId>HDSLedger</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <artifactId>Blockchain</artifactId>
 
     <properties>
         <mainClass>group13.blockchain.member.Member</mainClass>
