--- a/Channel/pom.xml
+++ b/Channel/pom.xml
@@ -2,14 +2,17 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <parent>
+        <artifactId>HDSLedger</artifactId>
+        <groupId>group13</groupId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
+
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>group13</groupId>
-    <artifactId>HDSLedger</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <artifactId>Channel</artifactId>
 
     <properties>
-        <mainClass>group13.member.Member</mainClass>
         <maven.compiler.source>19</maven.compiler.source>
         <maven.compiler.target>19</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
