--- a/Blockchain/pom.xml
+++ b/Blockchain/pom.xml
@@ -13,7 +13,7 @@
     <artifactId>Blockchain</artifactId>
 
     <properties>
-        <mainClass>group13.blockchain.member.Member</mainClass>
+        <mainClass>group13.blockchain.member.StartServer</mainClass>
         <maven.compiler.source>19</maven.compiler.source>
         <maven.compiler.target>19</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
