--- a/Blockchain/pom.xml
+++ b/Blockchain/pom.xml
@@ -30,6 +30,11 @@
             <artifactId>Channel</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>Client</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
